# hackitall2022-backend

./: .db_env  .env  .gitignore  Dockerfile  README.md  bcr_operations.json  bcr_response.json  docker-compose.yml  insert_branches.py  manage.py  pyproject.toml  start-server.sh
appointments/: ics.py  models.py  serializers.py  views.py
appointments/migrations/: 0001_initial.py  0002_alter_appointment_branch.py  0003_rename_date_appointment_start_date_and_more.py  0004_appointment_uuid.py
appointments/templates/: delete_appointment.html  email.html
bcr/: asgi.py  settings.py  urls.py  wsgi.py
branches/: models.py  serializers.py  views.py
branches/migrations/: 0001_initial.py  0002_operation_appointment_duration_operation_description_and_more.py  0003_remove_branch_branch_id.py
branches/scripts/: insert_branches.py
